--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.2",
     "flowbite-react": "^0.9.0",
     "formik": "^2.4.6",
+    "lodash": "^4.17.21",
     "next": "14.2.3",
     "next-auth": "^4.24.5",
     "react": "^18",
@@ -28,6 +29,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
