--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.19",
     "@mui/material-nextjs": "^5.15.11",
+    "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-query": "^5.40.0",
     "axios": "^1.7.2",
     "flowbite-react": "^0.9.0",
@@ -25,6 +26,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
     "sharp": "^0.33.4",
     "swiper": "^11.1.4",
     "yup": "^1.4.0"
