--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,10 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "export NODE_ENV=production && nodemon src/app.ts",
+    "start:prod": "export NODE_ENV=production && nodemon src/app.ts",
     "dev": "nodemon src/app.ts",
     "dev:debug": "export NODE_ENV=development && nodemon --inspect src/app.ts",
+    "start:migrate:prod": "cd src/ && prisma migrate deploy && npx prisma db push && npm run start:prod",
     "lint": "eslint .",
     "lint-fix": "eslint . --fix"
   },
@@ -42,7 +43,7 @@
     "@typescript-eslint/parser": "^7.4.0",
     "eslint": "^8.57.0",
     "eslint-config-google": "^0.14.0",
-    "prisma": "^5.12.1"
+    "prisma": "^5.18.0"
   },
   "_moduleAliases": {
     "@src": "src",
