Dockerized forntend and backend, Setup Dockerized Development Environment

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,11 +2,16 @@
 FROM node:20.15.0-alpine
 
     WORKDIR /app/backend
-    # COPY package.json .
+    #Copy package.json (creates a cacheable layer)
+    COPY package.json .
+    # Install dependencies (cached if package.json hasn't changed)     
+    RUN npm install && npm install prisma -g
     COPY . .
-    RUN npm install
     EXPOSE 3001
-    RUN npm install prisma -g
-    # RUN cd src/prisma && npx prisma db push
-  # 👇 new migrate and start app script
-CMD [ "npm", "run", "start:migrate:prod" ]
+  #  new migrate and start app script
+# CMD [ "npm", "run", "start:migrate:prod" ]
+
+CMD [ "npm", "run", "start:prod" ]
+
+# Check if in a dev environment; otherwise, start the app normally
+# CMD [ "sh", "-c", "if [ \"$DEV\" = \"true\" ]; then tail -f /dev/null; else npm run start:migrate:prod; fi" ]
