--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,9 @@ services:
       - "3000:3000"
     depends_on:
       - backend
+    volumes:
+         - ./frontend:/app/frontend # container path should be same as specified in DockerFile e-g /app/frontend
+         - /app/frontend/node_modules # Ensures that the node_modules directory is created in the container and not overridden by the host’s empty node_modules directory
       
   backend:
     container_name: furnishart-backend
@@ -32,8 +35,12 @@ services:
     ports:
       - "3001:3001"
     environment:
-      DATABASE_URL: postgres://admin:admin123@postgres_db:5432/furnishart_db
+      DATABASE_URL: postgres://admin:admin123@postgres_db:5432/furnishart_db,
+      DEV: "true"  # 👈 Add this line for development
     depends_on:
       - postgres_db
+    volumes:
+         - ./backend:/app/backend
+         - /app/backend/node_modules # Ensures that the node_modules directory is created in the container and not overridden by the host’s empty node_modules directory
 volumes:
   pgdata:
