--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     restart: always
     environment:
       POSTGRES_PASSWORD: admin123
-      POSTGRES_USER: admin
+      POSTGRES_USER: postgres
       POSTGRES_DB: furnishart_db
     volumes:
       - pgdata:/var/lib/postgresql/data
@@ -20,6 +20,9 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
+    environment:
+      BACKEND_API_URL: http://backend:3001/api # For Server Side Request (for Server Side Request we need send request to  backend:3001 instead localhost:3001 which refers to forntend container itself)
+      CHOKIDAR_USEPOLLING: true
     depends_on:
       - backend
     volumes:
@@ -35,8 +38,8 @@ services:
     ports:
       - "3001:3001"
     environment:
-      DATABASE_URL: postgres://admin:admin123@postgres_db:5432/furnishart_db,
-      DEV: "true"  # 👈 Add this line for development
+      DATABASE_URL: postgres://admin:admin123@postgres_db:5432/furnishart_db
+      # DEV: "true"  # 👈 Add this line for development
     depends_on:
       - postgres_db
     volumes:
