--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,14 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.19",
     "@mui/material-nextjs": "^5.15.11",
+    "@react-three/drei": "^9.111.2",
+    "@react-three/fiber": "^8.17.5",
     "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-query": "^5.40.0",
     "axios": "^1.7.2",
     "flowbite-react": "^0.9.0",
     "formik": "^2.4.6",
+    "leva": "^0.9.35",
     "lodash": "^4.17.21",
     "next": "14.2.3",
     "next-auth": "^4.24.5",
@@ -27,8 +30,10 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
+    "react-three-fiber": "^6.0.13",
     "sharp": "^0.33.4",
     "swiper": "^11.1.4",
+    "three": "^0.167.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
