--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -14,6 +14,6 @@
       "@utils/*": ["src/utils/*"]
     }
   },
-  "include": ["src/**/*.ts", "../frontend/src/utils/filteredItems.ts"],
+  "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
 }
