--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.19",
     "@mui/material-nextjs": "^5.15.11",
-    "@react-three/drei": "^9.111.2",
+    "@react-three/drei": "^9.111.3",
     "@react-three/fiber": "^8.17.5",
     "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-query": "^5.40.0",
@@ -30,7 +30,6 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
-    "react-three-fiber": "^6.0.13",
     "sharp": "^0.33.4",
     "swiper": "^11.1.4",
     "three": "^0.167.1",
@@ -41,6 +40,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/three": "^0.167.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
