--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,10 +20,14 @@
     "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-query": "^5.40.0",
     "axios": "^1.7.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "flowbite-react": "^0.9.0",
     "formik": "^2.4.6",
+    "framer-motion": "^11.3.30",
     "leva": "^0.9.35",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.436.0",
     "next": "14.2.3",
     "next-auth": "^4.24.5",
     "react": "^18",
@@ -32,6 +36,8 @@
     "react-redux": "^9.1.2",
     "sharp": "^0.33.4",
     "swiper": "^11.1.4",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.167.1",
     "yup": "^1.4.0"
   },
