--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,6 +7,6 @@ FROM node:20.15.0-alpine
     # Install dependencies (cached if package.json hasn't changed)     
     RUN npm install 
     COPY . .
-    EXPOSE 3000
+    RUN npm run build
 
-CMD [ "npm", "run", "dev" ]
+CMD [ "npm", "run", "start" ]
