--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "dev": "nodemon -L  src/app.ts",
     "dev:debug": "nodemon --inspect src/app.ts",
     "start:migrate:prod": "cd src/ && prisma migrate deploy && npx prisma db push && npm run start:prod",
+    "start:migrate:dev": "cd src/ && prisma migrate deploy && npx prisma db push && npm run dev",
     "lint": "eslint .",
     "lint-fix": "eslint . --fix"
   },
