--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "moment": "^2.30.1",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
+    "stripe": "^16.12.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.3"
   },
