--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@react-three/drei": "^9.111.3",
     "@react-three/fiber": "^8.17.5",
     "@reduxjs/toolkit": "^2.2.5",
+    "@stripe/react-stripe-js": "^2.8.0",
     "@tanstack/react-query": "^5.40.0",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
