Updated Readme and Deleted assets separate backend

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,20 +1,30 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
 
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-DATABASE_URL=""
+NODE_ENV="development"
+# Database Configuration
+DB_HOST=""
 DB_NAME=""
-DB_USER="postgres"
-DB_PASSWORD="admin123"
-DB_HOST="localhost"
+DB_USER=""
+DB_PASSWORD=""
+DATABASE_URL=""
 DB_PORT="5432"
-SERVER_PORT=3001
+SERVER_PORT="3001"
+
+# JWT Configuration
 JWT_ACCESS_TOKEN_SECRET=""
-JWT_ACCESS_TOKEN_EXPIRY="3D"
-GOOGLE_PASS="" # Google account password for sending emails
-EMAIL_VERIFICATION_TOKEN_EXPIRY=7200  # 2 hours in seconds (60*60*2)
-PASSWORD_RESET_TOKEN_EXPIRY=3600  # 1 hour in seconds (60*60)
+JWT_ACCESS_TOKEN_EXPIRY=""
+
+#  Node Mailer Configuration
+SMTP_PASSWORD=""
+SMTP_SERVICE=""
+SMTP_FROM_EMAIL=""
+
+# Verification Token Configuration
+EMAIL_VERIFICATION_TOKEN_EXPIRY="7200"  # 2 hours in seconds (60*60*2)
+PASSWORD_RESET_TOKEN_EXPIRY="3600"  # 1 hour in seconds (60*60)
 VERIFICATION_TOKEN_SECRET=""
-FRONTEND_URL="https://domain.com"
+# RESEND_VERIFICATION_EMAIL_TIME=600  # 10 minutes in seconds (60*10)
+
+# Stripe Configuration
+STRIPE_SECRET_KEY=""
+FRONTEND_URL="http://localhost:3000"
+
