--- a/backend/package.json
+++ b/backend/package.json
@@ -7,15 +7,16 @@
     "#*": "./src/*"
   },
   "scripts": {
-    "clean": "rimraf -r build && rimraf dist",
-    "build": "tsc && shx mkdir -p build/src && shx mv dist/* build/src/ && rimraf dist && npm run prod",
+    "heroku-postbuild": "npm install --include=dev && npm run migrate && npm run ts-build",
+    "ts-build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prod": "node build/src/app.js",
     "start:prod": "export NODE_ENV=production && nodemon -L src/app.ts",
+    "prod": "node dist/app.js",
     "dev": "nodemon -L  src/app.ts",
     "dev:debug": "nodemon --inspect src/app.ts",
-    "start:migrate:prod": "cd src/ && prisma migrate deploy && npx prisma db push && npm run start:prod",
-    "start:migrate:dev": "cd src/ && prisma migrate deploy && npx prisma db push && npm run dev",
+    "migrate": "cd src/ && prisma migrate deploy && npx prisma db push",
+    "start:migrate:prod": "npm run migrate && npm run start:prod",
+    "start:migrate:dev": "npm run migrate && npm run dev",
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
     "vercel-build": "echo hello"
@@ -64,12 +65,12 @@
     "rimraf": "^6.0.1"
   },
   "_moduleAliases": {
-    "@src": "build/src",
-    "@routes": "build/src/routes",
-    "@utils": "build/src/utils",
-    "@controllers": "build/src/controllers",
-    "@models": "build/src/models",
-    "@services": "build/src/services",
-    "@types": "build/src/types"
+    "@src": "dist",
+    "@routes": "dist/routes",
+    "@utils": "dist/utils",
+    "@controllers": "dist/controllers",
+    "@models": "dist/models",
+    "@services": "dist/services",
+    "@types": "dist/types"
   }
 }
